# gba_save

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
.mgba/eeprom_512b/mgba/: config.ini
.mgba/eeprom_8k/mgba/: config.ini
.mgba/flash_128k/mgba/: config.ini
.mgba/flash_64k/mgba/: config.ini
.mgba/none/mgba/: config.ini
.mgba/sram/mgba/: config.ini
src/: eeprom.rs  flash.rs  lib.rs  log.rs  mmio.rs  range.rs  sram.rs
src/eeprom/: error.rs  mod.rs  reader.rs  writer.rs
src/flash/: device.rs  error.rs  mod.rs  reader.rs  writer.rs
src/sram/: error.rs  mod.rs  reader.rs  writer.rs
tests/sram/: Cargo.toml
tests/sram/.cargo/: config.toml
tests/sram/src/: main.rs
