[package]
name = "gba_save"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
lto = true

[dependencies]
deranged = {version = "0.3.9", default-features = false}
embedded-io = "0.6.1"
log = "0.4"

[dev-dependencies]
claims = "0.8.0"
gba_test = {version = "0.3.2", features = ["log"]}
mgba_log = "0.2.1"
more_ranges = "0.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(sram)", "cfg(flash_64k)", "cfg(flash_64k_atmel)", "cfg(flash_128k)", "cfg(eeprom_512b)"]}
