[package]
name = "gba_save"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
lto = true

[dependencies]
deranged = {version = "0.3.9", default-features = false}
embedded-io = "0.6.1"
log = {version = "0.4.27", optional = true}
serde = {version = "1.0.219", default-features = false, optional = true}

[dev-dependencies]
claims = "0.8.0"
gba_test = {version = "0.3.2", features = ["log"]}
mgba_log = "0.2.1"
more_ranges = "0.1.0"
serde_assert = "0.8.0"

[features]
log = ["dep:log"]
serde = ["dep:serde"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(sram)", "cfg(flash_64k)", "cfg(flash_64k_atmel)", "cfg(flash_128k)", "cfg(eeprom_512b)", "cfg(eeprom_8k)"]}
